@@ -677,13 +677,16 @@ wp_file_open_dialog (GtkWidget *widget,
 
 static void
 wp_tree_delete_event (GtkWidget *widget,
-                      GdkEvent *event,
+                      gint response_id,
                       AppearanceData *data)
 {
-  gnome_wp_xml_save_list (data);
-  g_object_unref (data->wp_thumbs);
-  g_object_ref_sink (data->wp_filesel);
-  g_object_unref (data->wp_filesel);
+  if (response_id == 0 || response_id == GTK_RESPONSE_DELETE_EVENT) /* 0 = Close */
+  {
+    gnome_wp_xml_save_list (data);
+    g_object_unref (data->wp_thumbs);
+    g_object_ref_sink (data->wp_filesel);
+    g_object_unref (data->wp_filesel);
+  }
 }
 
 static void
