@@ -1,3 +1,10 @@
+2007-05-12  Denis Washington  <denisw@svn.nome.org>
+
+	* appearance.glade:
+	* appearance-desktop.c: (wp_tree_delete_event):
+	Fix for my last commit so there is no double free when the Help button has
+	been clicked.
+
 2007-05-12  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-desktop.c: (wp_scale_type_changed),
